# md-url-extractor

./: CHANGELOG.md  Cargo.toml  LICENSE.md  README.md  release-plz.toml
.github/workflows/: release-plz.yml
src/: main.rs
src/application/: link_extractor.rs
src/domain/: model.rs
src/domain/services/: url_cleaner.rs  url_processor.rs
src/infrastructure/: mod.rs
src/infrastructure/cli/: args.rs
src/infrastructure/output/: csv_formatter.rs  factory.rs  formatter.rs  html_formatter.rs  mod.rs  stdout_formatter.rs  text_formatter.rs
